...
            android:background="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/common_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.9">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
...
                    app:backgroundTint="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <EditText
                    android:id="@+id/edit_text_mail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter email address"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
...
                    app:backgroundTint="@android:color/white"
                    app:layout_constraintStart_toEndOf="@+id/edit_text_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <EditText
                    android:id="@+id/edit_text_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="Enter phone number"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:textColor="@android:color/white"
...
                    app:backgroundTint="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
                    app:layout_constraintWidth_percent="0.5" />

                <Button
                    android:id="@+id/button_add_contact"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_button"
                    android:text="Add"
                    android:textColor="#FFFFFF"
                    app:backgroundTint="@null"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createContact"
            app:layout_constraintWidth_percent="0.9">

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="Old Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
...
                app:backgroundTint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <EditText
                android:id="@+id/newPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="New Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="@android:color/white"
...
                app:backgroundTint="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/oldPassword"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.5" />

            <Button
                android:id="@+id/button_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/common_button"
                android:text="Change Password"
                android:textColor="#FFFFFF"
                app:backgroundTint="@null"
...
