<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp">


    <TextView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:gravity="center"
        android:paddingStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contact_phone"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact_name"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:gravity="center"
        android:paddingStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact_phone"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contact_email"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:background="@drawable/common_button"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            android:layout_gravity="center_vertical"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/show"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show "
            app:layout_constraintStart_toEndOf="@id/delete_button"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
