<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/simple_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray"
    tools:context=".views.SimpleView">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linear_emulator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="153dp"
            android:layout_height="54dp"
            android:src="@drawable/rubmo_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/connected_status"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/disconnected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="249dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/display_battery_status"
        android:src="@drawable/battery_v2a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_emulator" />

    <TextView
        android:id="@+id/status_prompt"
        android:layout_width="178dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/battery_status"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/linear_emulator" />

    <TextView
        android:id="@+id/advice_box"
        android:layout_width="178dp"
        android:layout_height="129dp"
        android:layout_marginStart="4dp"
        android:text="@string/simple_advice_box_okay"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/battery_status_Critical"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/status_prompt" />

    <TextView
        android:id="@+id/Emergency_contacts_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/emergency_contacts_title"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.266"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/emergency_contacts"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emergency_contacts_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password_login"
        android:layout_width="360dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.789"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone"
        app:layout_constraintWidth_percent="0.6"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/white"
            android:hint="@string/password_hint"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="182dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="112dp"
        android:backgroundTint="@color/white"
        android:text="@string/password_login_text"
        android:textColor="@color/black"
        android:textColorLink="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Password_login" />



</androidx.constraintlayout.widget.ConstraintLayout>