<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compact_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkmode_gray"
    tools:context=".views.CompactView">

    <androidx.constraintlayout.widget.ConstraintLayout
...
            android:id="@+id/connected_status"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/disconnected"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/settings"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
...
